# rust-agent-adapt

./: CHANGELOG.md  Cargo.toml  README.md
crates/agent-adapt/: Cargo.toml
crates/agent-adapt-core/: Cargo.toml
crates/agent-adapt-core/src/: error.rs  lib.rs  naming.rs  output.rs  runtime.rs
crates/agent-adapt-core/src/model/: agent.rs  hook.rs  mod.rs  pack.rs  role.rs  script.rs  skill.rs
crates/agent-adapt/src/: error.rs
src/: compose.rs  error.rs  install.rs  lib.rs  model.rs  naming.rs  output.rs  runtime.rs  tools.rs
src/mcp/: mod.rs  model.rs  render.rs
src/model/: agent.rs  hook.rs  mod.rs  pack.rs  role.rs  script.rs  skill.rs
src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs
src/render/: agent_md.rs  frontmatter.rs  hooks_json.rs  manifest.rs  mod.rs  script_body.rs  skill_md.rs
src/runtimes/: amp.rs  claude_code.rs  codex_cli.rs  gemini_cli.rs  mod.rs  npm_package.rs  opencode.rs  standard.rs
