[package]
name = "agent-adapt"
version = "0.1.0"
edition = "2024"
description = "Data structures and adapters for reading and writing coding-agent configuration across different agent formats (Claude, Codex, Gemini, ...)."
license = "MIT"
repository = "https://github.com/sksizer/rust-agent-adapt"
homepage = "https://github.com/sksizer/rust-agent-adapt"
readme = "README.md"
keywords = ["mcp", "ai", "agent", "claude", "codex"]
categories = ["config", "development-tools"]

[dependencies]
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
