[workspace]
resolver = "2"
members = [
    "crates/agent-adapt",
    "crates/agent-adapt-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sksizer/rust-agent-adapt"
homepage = "https://github.com/sksizer/rust-agent-adapt"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tempfile = "3"
